# filebin-api

./: .gitignore  LICENSE  README.md  main.py  pypi.md  pyproject.toml  requirements.txt  setup.py
filebin/: encoding.py  format.py  main.py  utils.py
src/filebin/: main.py  utils.py
