# TODO: need to chnage the links of source and Homepage

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filebin-cli"
version = "0.3"
authors = [
  { name="M. Shiraz Kamran", email="dev.mshiraz@gmail.com" },
]
description = "A cli tool to temporarily share file without any hassle. Uses filebin.net public api"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["cli", "filebin", "file-sharing", "temporary-files"] 

dependencies = [
    "click",
    "requests",
]

[project.scripts]
fbin = "filebin.main:main" # 'command = module:function'

[project.urls]
"Source" = "https://github.com/mshirazkamran/filebin-cli"
"Docs" = "https://github.com/mshirazkamran/filebin-api?tab=readme-ov-file#-filebin-cli"